# techno_c_hw1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: actions.yml
include/: schedule.h
src/: find_arrival_time.c  main.c  struct_schedule.c  struct_station.c  struct_train.c
test/: test.cpp
